Se agrega el tercer endpoint para ver las imagenes segun el ticket
